crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@186.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT t1.a, t1.c, t2.b, t2.c FROM prt1_l t1, prt2_l t2 WHERE t1.a = t2.b AND t1.b = 0 ORDER BY t1.a, t2.b;"
---
SelectStmt@0..107
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      Ident@10..11 "a"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..17
    ColumnRef@13..17
      Ident@13..15 "t1"
      Ascii46@15..16 "."
      Ident@16..17 "c"
  Ascii44@17..18 ","
  Whitespace@18..19 " "
  ResTarget@19..23
    ColumnRef@19..23
      Ident@19..21 "t2"
      Ascii46@21..22 "."
      Ident@22..23 "b"
  Ascii44@23..24 ","
  Whitespace@24..25 " "
  ResTarget@25..29
    ColumnRef@25..29
      Ident@25..27 "t2"
      Ascii46@27..28 "."
      Ident@28..29 "c"
  Whitespace@29..30 " "
  From@30..34 "FROM"
  Whitespace@34..35 " "
  RangeVar@35..44
    Ident@35..41 "prt1_l"
    Whitespace@41..42 " "
    Alias@42..44
      Ident@42..44 "t1"
  Ascii44@44..45 ","
  Whitespace@45..46 " "
  RangeVar@46..55
    Ident@46..52 "prt2_l"
    Whitespace@52..53 " "
    Alias@53..55
      Ident@53..55 "t2"
  Whitespace@55..56 " "
  Where@56..61 "WHERE"
  Whitespace@61..62 " "
  BoolExpr@62..86
    AExpr@62..73
      ColumnRef@62..66
        Ident@62..64 "t1"
        Ascii46@64..65 "."
        Ident@65..66 "a"
      Whitespace@66..67 " "
      Ascii61@67..68 "="
      Whitespace@68..69 " "
      ColumnRef@69..73
        Ident@69..71 "t2"
        Ascii46@71..72 "."
        Ident@72..73 "b"
    Whitespace@73..74 " "
    And@74..77 "AND"
    Whitespace@77..78 " "
    AExpr@78..86
      ColumnRef@78..82
        Ident@78..80 "t1"
        Ascii46@80..81 "."
        Ident@81..82 "b"
      Whitespace@82..83 " "
      Ascii61@83..84 "="
      Whitespace@84..85 " "
      AConst@85..86
        Iconst@85..86 "0"
  Whitespace@86..87 " "
  SortBy@87..100
    Order@87..92 "ORDER"
    Whitespace@92..93 " "
    By@93..95 "BY"
    Whitespace@95..96 " "
    ColumnRef@96..100
      Ident@96..98 "t1"
      Ascii46@98..99 "."
      Ident@99..100 "a"
  Ascii44@100..101 ","
  Whitespace@101..102 " "
  SortBy@102..106
    ColumnRef@102..106
      Ident@102..104 "t2"
      Ascii46@104..105 "."
      Ident@105..106 "b"
  Ascii59@106..107 ";"

