crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@188.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT t1.a, t1.c, t2.b, t2.c FROM prt1_l t1 LEFT JOIN prt2_l t2 ON t1.a = t2.b AND t1.c = t2.c WHERE t1.b = 0 ORDER BY t1.a, t2.b;"
---
SelectStmt@0..131
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      Ident@10..11 "a"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..17
    ColumnRef@13..17
      Ident@13..15 "t1"
      Ascii46@15..16 "."
      Ident@16..17 "c"
  Ascii44@17..18 ","
  Whitespace@18..19 " "
  ResTarget@19..23
    ColumnRef@19..23
      Ident@19..21 "t2"
      Ascii46@21..22 "."
      Ident@22..23 "b"
  Ascii44@23..24 ","
  Whitespace@24..25 " "
  ResTarget@25..29
    ColumnRef@25..29
      Ident@25..27 "t2"
      Ascii46@27..28 "."
      Ident@28..29 "c"
  Whitespace@29..30 " "
  From@30..34 "FROM"
  Whitespace@34..35 " "
  JoinExpr@35..95
    RangeVar@35..44
      Ident@35..41 "prt1_l"
      Whitespace@41..42 " "
      Alias@42..44
        Ident@42..44 "t1"
    Whitespace@44..45 " "
    Left@45..49 "LEFT"
    Whitespace@49..50 " "
    Join@50..54 "JOIN"
    Whitespace@54..55 " "
    RangeVar@55..64
      Ident@55..61 "prt2_l"
      Whitespace@61..62 " "
      Alias@62..64
        Ident@62..64 "t2"
    Whitespace@64..65 " "
    On@65..67 "ON"
    Whitespace@67..68 " "
    BoolExpr@68..95
      AExpr@68..79
        ColumnRef@68..72
          Ident@68..70 "t1"
          Ascii46@70..71 "."
          Ident@71..72 "a"
        Whitespace@72..73 " "
        Ascii61@73..74 "="
        Whitespace@74..75 " "
        ColumnRef@75..79
          Ident@75..77 "t2"
          Ascii46@77..78 "."
          Ident@78..79 "b"
      Whitespace@79..80 " "
      And@80..83 "AND"
      Whitespace@83..84 " "
      AExpr@84..95
        ColumnRef@84..88
          Ident@84..86 "t1"
          Ascii46@86..87 "."
          Ident@87..88 "c"
        Whitespace@88..89 " "
        Ascii61@89..90 "="
        Whitespace@90..91 " "
        ColumnRef@91..95
          Ident@91..93 "t2"
          Ascii46@93..94 "."
          Ident@94..95 "c"
  Whitespace@95..96 " "
  Where@96..101 "WHERE"
  Whitespace@101..102 " "
  AExpr@102..110
    ColumnRef@102..106
      Ident@102..104 "t1"
      Ascii46@104..105 "."
      Ident@105..106 "b"
    Whitespace@106..107 " "
    Ascii61@107..108 "="
    Whitespace@108..109 " "
    AConst@109..110
      Iconst@109..110 "0"
  Whitespace@110..111 " "
  SortBy@111..124
    Order@111..116 "ORDER"
    Whitespace@116..117 " "
    By@117..119 "BY"
    Whitespace@119..120 " "
    ColumnRef@120..124
      Ident@120..122 "t1"
      Ascii46@122..123 "."
      Ident@123..124 "a"
  Ascii44@124..125 ","
  Whitespace@125..126 " "
  SortBy@126..130
    ColumnRef@126..130
      Ident@126..128 "t2"
      Ascii46@128..129 "."
      Ident@129..130 "b"
  Ascii59@130..131 ";"

