crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@190.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT t1.a, t1.c, t2.b, t2.c FROM prt1_l t1 RIGHT JOIN prt2_l t2 ON t1.a = t2.b AND t1.c = t2.c WHERE t2.a = 0 ORDER BY t1.a, t2.b;"
---
SelectStmt@0..132
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      Ident@10..11 "a"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..17
    ColumnRef@13..17
      Ident@13..15 "t1"
      Ascii46@15..16 "."
      Ident@16..17 "c"
  Ascii44@17..18 ","
  Whitespace@18..19 " "
  ResTarget@19..23
    ColumnRef@19..23
      Ident@19..21 "t2"
      Ascii46@21..22 "."
      Ident@22..23 "b"
  Ascii44@23..24 ","
  Whitespace@24..25 " "
  ResTarget@25..29
    ColumnRef@25..29
      Ident@25..27 "t2"
      Ascii46@27..28 "."
      Ident@28..29 "c"
  Whitespace@29..30 " "
  From@30..34 "FROM"
  Whitespace@34..35 " "
  JoinExpr@35..96
    RangeVar@35..44
      Ident@35..41 "prt1_l"
      Whitespace@41..42 " "
      Alias@42..44
        Ident@42..44 "t1"
    Whitespace@44..45 " "
    Right@45..50 "RIGHT"
    Whitespace@50..51 " "
    Join@51..55 "JOIN"
    Whitespace@55..56 " "
    RangeVar@56..65
      Ident@56..62 "prt2_l"
      Whitespace@62..63 " "
      Alias@63..65
        Ident@63..65 "t2"
    Whitespace@65..66 " "
    On@66..68 "ON"
    Whitespace@68..69 " "
    BoolExpr@69..96
      AExpr@69..80
        ColumnRef@69..73
          Ident@69..71 "t1"
          Ascii46@71..72 "."
          Ident@72..73 "a"
        Whitespace@73..74 " "
        Ascii61@74..75 "="
        Whitespace@75..76 " "
        ColumnRef@76..80
          Ident@76..78 "t2"
          Ascii46@78..79 "."
          Ident@79..80 "b"
      Whitespace@80..81 " "
      And@81..84 "AND"
      Whitespace@84..85 " "
      AExpr@85..96
        ColumnRef@85..89
          Ident@85..87 "t1"
          Ascii46@87..88 "."
          Ident@88..89 "c"
        Whitespace@89..90 " "
        Ascii61@90..91 "="
        Whitespace@91..92 " "
        ColumnRef@92..96
          Ident@92..94 "t2"
          Ascii46@94..95 "."
          Ident@95..96 "c"
  Whitespace@96..97 " "
  Where@97..102 "WHERE"
  Whitespace@102..103 " "
  AExpr@103..111
    ColumnRef@103..107
      Ident@103..105 "t2"
      Ascii46@105..106 "."
      Ident@106..107 "a"
    Whitespace@107..108 " "
    Ascii61@108..109 "="
    Whitespace@109..110 " "
    AConst@110..111
      Iconst@110..111 "0"
  Whitespace@111..112 " "
  SortBy@112..125
    Order@112..117 "ORDER"
    Whitespace@117..118 " "
    By@118..120 "BY"
    Whitespace@120..121 " "
    ColumnRef@121..125
      Ident@121..123 "t1"
      Ascii46@123..124 "."
      Ident@124..125 "a"
  Ascii44@125..126 ","
  Whitespace@126..127 " "
  SortBy@127..131
    ColumnRef@127..131
      Ident@127..129 "t2"
      Ascii46@129..130 "."
      Ident@130..131 "b"
  Ascii59@131..132 ";"

