crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@192.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT t1.a, t1.c, t2.b, t2.c FROM (SELECT * FROM prt1_l WHERE prt1_l.b = 0) t1 FULL JOIN (SELECT * FROM prt2_l WHERE prt2_l.a = 0) t2 ON (t1.a = t2.b AND t1.c = t2.c) ORDER BY t1.a, t2.b;"
---
SelectStmt@0..188
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      Ident@10..11 "a"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..17
    ColumnRef@13..17
      Ident@13..15 "t1"
      Ascii46@15..16 "."
      Ident@16..17 "c"
  Ascii44@17..18 ","
  Whitespace@18..19 " "
  ResTarget@19..23
    ColumnRef@19..23
      Ident@19..21 "t2"
      Ascii46@21..22 "."
      Ident@22..23 "b"
  Ascii44@23..24 ","
  Whitespace@24..25 " "
  ResTarget@25..29
    ColumnRef@25..29
      Ident@25..27 "t2"
      Ascii46@27..28 "."
      Ident@28..29 "c"
  Whitespace@29..30 " "
  From@30..34 "FROM"
  Whitespace@34..35 " "
  Ascii40@35..36 "("
  JoinExpr@36..166
    RangeSubselect@36..79
      SelectStmt@36..75
        Select@36..42 "SELECT"
        Whitespace@42..43 " "
        ResTarget@43..44
          ColumnRef@43..44
            AStar@43..44
              Ascii42@43..44 "*"
        Whitespace@44..45 " "
        From@45..49 "FROM"
        Whitespace@49..50 " "
        RangeVar@50..56
          Ident@50..56 "prt1_l"
        Whitespace@56..57 " "
        Where@57..62 "WHERE"
        Whitespace@62..63 " "
        AExpr@63..75
          ColumnRef@63..71
            Ident@63..69 "prt1_l"
            Ascii46@69..70 "."
            Ident@70..71 "b"
          Whitespace@71..72 " "
          Ascii61@72..73 "="
          Whitespace@73..74 " "
          AConst@74..75
            Iconst@74..75 "0"
      Ascii41@75..76 ")"
      Whitespace@76..77 " "
      Alias@77..79
        Ident@77..79 "t1"
    Whitespace@79..80 " "
    Full@80..84 "FULL"
    Whitespace@84..85 " "
    Join@85..89 "JOIN"
    Whitespace@89..90 " "
    Ascii40@90..91 "("
    RangeSubselect@91..134
      SelectStmt@91..130
        Select@91..97 "SELECT"
        Whitespace@97..98 " "
        ResTarget@98..99
          ColumnRef@98..99
            AStar@98..99
              Ascii42@98..99 "*"
        Whitespace@99..100 " "
        From@100..104 "FROM"
        Whitespace@104..105 " "
        RangeVar@105..111
          Ident@105..111 "prt2_l"
        Whitespace@111..112 " "
        Where@112..117 "WHERE"
        Whitespace@117..118 " "
        AExpr@118..130
          ColumnRef@118..126
            Ident@118..124 "prt2_l"
            Ascii46@124..125 "."
            Ident@125..126 "a"
          Whitespace@126..127 " "
          Ascii61@127..128 "="
          Whitespace@128..129 " "
          AConst@129..130
            Iconst@129..130 "0"
      Ascii41@130..131 ")"
      Whitespace@131..132 " "
      Alias@132..134
        Ident@132..134 "t2"
    Whitespace@134..135 " "
    On@135..137 "ON"
    Whitespace@137..138 " "
    Ascii40@138..139 "("
    BoolExpr@139..166
      AExpr@139..150
        ColumnRef@139..143
          Ident@139..141 "t1"
          Ascii46@141..142 "."
          Ident@142..143 "a"
        Whitespace@143..144 " "
        Ascii61@144..145 "="
        Whitespace@145..146 " "
        ColumnRef@146..150
          Ident@146..148 "t2"
          Ascii46@148..149 "."
          Ident@149..150 "b"
      Whitespace@150..151 " "
      And@151..154 "AND"
      Whitespace@154..155 " "
      AExpr@155..166
        ColumnRef@155..159
          Ident@155..157 "t1"
          Ascii46@157..158 "."
          Ident@158..159 "c"
        Whitespace@159..160 " "
        Ascii61@160..161 "="
        Whitespace@161..162 " "
        ColumnRef@162..166
          Ident@162..164 "t2"
          Ascii46@164..165 "."
          Ident@165..166 "c"
  Ascii41@166..167 ")"
  Whitespace@167..168 " "
  SortBy@168..181
    Order@168..173 "ORDER"
    Whitespace@173..174 " "
    By@174..176 "BY"
    Whitespace@176..177 " "
    ColumnRef@177..181
      Ident@177..179 "t1"
      Ascii46@179..180 "."
      Ident@180..181 "a"
  Ascii44@181..182 ","
  Whitespace@182..183 " "
  SortBy@183..187
    ColumnRef@183..187
      Ident@183..185 "t2"
      Ascii46@185..186 "."
      Ident@186..187 "b"
  Ascii59@187..188 ";"

