crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@198.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE prt1_n_p1 PARTITION OF prt1_n FOR VALUES FROM ('0000') TO ('0250');"
---
CreateStmt@0..80
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..22
    Ident@13..22 "prt1_n_p1"
  Whitespace@22..23 " "
  Partition@23..32 "PARTITION"
  Whitespace@32..33 " "
  Of@33..35 "OF"
  Whitespace@35..36 " "
  RangeVar@36..42
    Ident@36..42 "prt1_n"
  Whitespace@42..43 " "
  For@43..46 "FOR"
  Whitespace@46..47 " "
  Values@47..53 "VALUES"
  Whitespace@53..54 " "
  PartitionBoundSpec@54..78
    From@54..58 "FROM"
    Whitespace@58..59 " "
    Ascii40@59..60 "("
    AConst@60..66
      Sconst@60..66 "'0000'"
    Ascii41@66..67 ")"
    Whitespace@67..68 " "
    To@68..70 "TO"
    Whitespace@70..71 " "
    Ascii40@71..72 "("
    AConst@72..78
      Sconst@72..78 "'0250'"
  Ascii41@78..79 ")"
  Ascii59@79..80 ";"

