crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@203.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE prt2_n_p1 PARTITION OF prt2_n FOR VALUES IN ('0000', '0003', '0004', '0010', '0006', '0007');"
---
CreateStmt@0..106
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..22
    Ident@13..22 "prt2_n_p1"
  Whitespace@22..23 " "
  Partition@23..32 "PARTITION"
  Whitespace@32..33 " "
  Of@33..35 "OF"
  Whitespace@35..36 " "
  RangeVar@36..42
    Ident@36..42 "prt2_n"
  Whitespace@42..43 " "
  For@43..46 "FOR"
  Whitespace@46..47 " "
  Values@47..53 "VALUES"
  Whitespace@53..54 " "
  PartitionBoundSpec@54..104
    InP@54..56 "IN"
    Whitespace@56..57 " "
    Ascii40@57..58 "("
    AConst@58..64
      Sconst@58..64 "'0000'"
    Ascii44@64..65 ","
    Whitespace@65..66 " "
    AConst@66..72
      Sconst@66..72 "'0003'"
    Ascii44@72..73 ","
    Whitespace@73..74 " "
    AConst@74..80
      Sconst@74..80 "'0004'"
    Ascii44@80..81 ","
    Whitespace@81..82 " "
    AConst@82..88
      Sconst@82..88 "'0010'"
    Ascii44@88..89 ","
    Whitespace@89..90 " "
    AConst@90..96
      Sconst@90..96 "'0006'"
    Ascii44@96..97 ","
    Whitespace@97..98 " "
    AConst@98..104
      Sconst@98..104 "'0007'"
  Ascii41@104..105 ")"
  Ascii59@105..106 ";"

