crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@205.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO prt2_n SELECT i, i, to_char(i/50, 'FM0000') FROM generate_series(0, 599, 2) i;"
---
InsertStmt@0..90
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "prt2_n"
  Whitespace@18..19 " "
  SelectStmt@19..89
    Select@19..25 "SELECT"
    Whitespace@25..26 " "
    ResTarget@26..27
      ColumnRef@26..27
        Ident@26..27 "i"
    Ascii44@27..28 ","
    Whitespace@28..29 " "
    ResTarget@29..30
      ColumnRef@29..30
        Ident@29..30 "i"
    Ascii44@30..31 ","
    Whitespace@31..32 " "
    ResTarget@32..54
      FuncCall@32..54
        Ident@32..39 "to_char"
        Ascii40@39..40 "("
        AExpr@40..44
          ColumnRef@40..41
            Ident@40..41 "i"
          Ascii47@41..42 "/"
          AConst@42..44
            Iconst@42..44 "50"
        Ascii44@44..45 ","
        Whitespace@45..46 " "
        AConst@46..54
          Sconst@46..54 "'FM0000'"
    Ascii41@54..55 ")"
    Whitespace@55..56 " "
    From@56..60 "FROM"
    Whitespace@60..61 " "
    RangeFunction@61..89
      List@61..86
        FuncCall@61..86
          Ident@61..76 "generate_series"
          Ascii40@76..77 "("
          AConst@77..78
            Iconst@77..78 "0"
          Ascii44@78..79 ","
          Whitespace@79..80 " "
          AConst@80..83
            Iconst@80..83 "599"
          Ascii44@83..84 ","
          Whitespace@84..85 " "
          AConst@85..86
            Iconst@85..86 "2"
      Ascii41@86..87 ")"
      Whitespace@87..88 " "
      Alias@88..89
        Ident@88..89 "i"
  Ascii59@89..90 ";"

